--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
                 </div>
                 <div>
                     <div class="card pad">
-                        <div style="display:flex;align-items:center;gap:.5rem"><svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M3 3v18h18" /></svg><strong>Przykładowa rekomendacja agenta</strong></div>
+                        <div style="display:flex;align-items:center;gap:.5rem"><svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M3 3v18h18" /></svg><strong>Przykładowa rekomendacja asystenta AI</strong></div>
                         <div class="mt-3">
                             <div class="card pad" style="background:#f8fafc">
                                 <p class="mb-2"><strong>SKU:</strong> Kurtka Softshell X200</p>
@@ -511,7 +511,7 @@
                 <div class="card pad">
                     <div class="muted">Krok 3</div>
                     <div class="feature-title mt-2">Działasz szybciej</div>
-                    <p class="muted mt-2">Agent sugeruje ceny i zakupy. Zatwierdzasz jednym kliknięciem.</p>
+                    <p class="muted mt-2">Asystent sugeruje ceny i zakupy. Zatwierdzasz jednym kliknięciem.</p>
                 </div>
             </div>
         </div>
@@ -598,7 +598,7 @@
                 <div class="grid grid-2" style="gap:1.25rem">
                     <div>
                         <h3 style="margin:0">Zamów demo</h3>
-                        <p class="muted mt-2">Pokażemy jak agent AI doradza w realnych scenariuszach Allegro: prognozy, ceny, anomalie i symulacje.</p>
+                        <p class="muted mt-2">Pokażemy jak asystent AI doradza w realnych scenariuszach Allegro: prognozy, ceny, anomalie i symulacje.</p>
                         <ul class="list mt-2">
                             <li><svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M5 12l5 5L20 7" /></svg>15-minutowy przegląd funkcji</li>
                             <li><svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M5 12l5 5L20 7" /></svg>Krótkie podłączenie sandbox/CSV</li>
