--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
                 </div>
                 <div>
                     <div class="card pad">
-                        <div style="display:flex;align-items:center;gap:.5rem"><svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M3 3v18h18" /></svg><strong>Przykładowa rekomendacja asystenta AI</strong></div>
+                        <div style="display:flex;align-items:center;gap:.5rem"><svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M3 3v18h18" /></svg><strong>Przykładowa rekomendacja asystenta</strong></div>
                         <div class="mt-3">
                             <div class="card pad" style="background:#f8fafc">
                                 <p class="mb-2"><strong>SKU:</strong> Kurtka Softshell X200</p>
