Added links to dashboard.

--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                     <a href="#pricing">Cennik</a>
                 </nav>
                 <div style="display:flex;gap:.5rem">
-                    <a class="btn" href="#demo">Zamów demo</a>
+                    <a class="btn" href="dashboard.html">Zobacz demo</a>
                 </div>
             </div>
         </div>
@@ -420,8 +420,8 @@
                     <p class="lead mt-3">eShop Copilot AI analizuje sprzedaż, konkurencję i sezonowość, aby prognozować popyt, rekomendować ceny i wykrywać anomalie. Zmieniaj ceny i plany zakupów jednym kliknięciem.</p>
                     <div class="mt-6" style="display:flex;gap:.5rem;flex-wrap:wrap">
                         <a class="btn primary" href="#pricing">Zobacz cennik</a>
-                        <a class="btn" href="#demo">
-                            Zamów demo
+                        <a class="btn" href="dashboard.html">
+                            Zobacz demo
                             <svg class="icon" style="margin-left:.25rem" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M9 18l6-6-6-6" /></svg>
                         </a>
                     </div>
@@ -597,7 +597,7 @@
             <div class="card pad">
                 <div class="grid grid-2" style="gap:1.25rem">
                     <div>
-                        <h3 style="margin:0">Zamów demo</h3>
+                        <h3 style="margin:0">Zobacz demo</h3>
                         <p class="muted mt-2">Pokażemy jak asystent AI doradza w realnych scenariuszach Allegro: prognozy, ceny, anomalie i symulacje.</p>
                         <ul class="list mt-2">
                             <li><svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M5 12l5 5L20 7" /></svg>15-minutowy przegląd funkcji</li>
@@ -636,7 +636,7 @@
     <footer>
         <div class="container">
             <div class="footer-row">
-                <p class="muted">© <span id="year"></span> eShop Copilot AI. Wszelkie prawa zastrzeżone.</p>
+                <p class="muted">© <span id="year"></span> Simmsoft. Wszelkie prawa zastrzeżone.</p>
                 <div style="display:flex;gap:1rem">
                     <a class="muted" href="#">Regulamin</a>
                     <a class="muted" href="#">Polityka prywatności</a>
