--- a/dashboard.html
+++ b/dashboard.html
@@ -128,7 +128,8 @@
             backdrop-filter: blur(4px);
             padding: .35rem .75rem;
             font-size: .72rem;
-            color: #334155
+            color: #334155 font-size:0.55rem;
+            padding: .15rem .45rem;
         }
 
         .card {
@@ -200,7 +201,7 @@
 
         @media(min-width:980px) {
             .grid.cols {
-                grid-template-columns: 380px 1fr
+                grid-template-columns: minmax(360px, 40%) 1fr
             }
         }
 
@@ -553,7 +554,7 @@
             box-shadow: 0 1px 1px var(--ring),0 2px 6px var(--ring);
             padding: .6rem .7rem;
             display: grid;
-            grid-template-columns: 110px 1fr auto;
+            grid-template-columns: 80px 1fr auto;
             align-items: flex-start;
             gap: .6rem;
         }
@@ -569,6 +570,8 @@
             .rec-card .details {
                 overflow: hidden;
                 text-overflow: ellipsis;
+                min-width: 0;
+                white-space: normal;
             }
 
             .rec-card .impact {
@@ -583,7 +586,7 @@
 
         @media (max-width: 720px) {
             .rec-card {
-                grid-template-columns: 1fr;
+                grid-template-columns: 80px 1fr auto;
             }
 
                 .rec-card .actions {
@@ -605,7 +608,7 @@
             box-shadow: 0 1px 1px var(--ring),0 2px 6px var(--ring);
             padding: .6rem .7rem;
             display: grid;
-            grid-template-columns: 110px 1fr auto;
+            grid-template-columns: 80px 1fr auto;
             align-items: flex-start;
             gap: .6rem;
         }
@@ -621,6 +624,8 @@
             .rec-card .details {
                 overflow: hidden;
                 text-overflow: ellipsis;
+                min-width: 0;
+                white-space: normal;
             }
 
             .rec-card .impact {
@@ -659,12 +664,19 @@
 
         @media (max-width: 720px) {
             .rec-card {
-                grid-template-columns: 1fr;
+                grid-template-columns: 80px 1fr auto;
             }
 
                 .rec-card .actions {
                     justify-content: flex-start;
                 }
+        }
+
+        /* Force smaller toolbar badge text */
+        .toolbar .badge {
+            font-size: 0.45rem !important;
+            padding: .1rem .35rem !important;
+            line-height: 1.1 !important;
         }
     </style>
 </head>
@@ -939,6 +951,38 @@
     <div style="position:fixed;bottom:4px;left:8px;font-size:0.75rem;color:#9ca3af;">
         © 2025 Simmsoft. Wszelkie prawa zastrzeżone.
     </div>
+
+
+    <style>
+        body .toolbar .badge {
+            font-size: 0.4rem !important;
+            padding: .05rem .25rem !important;
+            line-height: 1 !important;
+        }
+    </style>
+
+
+    <style>
+        /* The toolbar uses .chip, not .badge — shrink it here */
+        .toolbar .chip {
+            font-size: 0.65rem !important;
+            padding: .05rem .3rem !important;
+            line-height: 1 !important;
+        }
+
+            .toolbar .chip input {
+                transform: scale(0.85);
+                margin-right: .25rem;
+            }
+    </style>
+
+
+    <style>
+        main.container {
+            padding-left: 1.25rem !important;
+            padding-right: 1.25rem !important;
+        }
+    </style>
 
 </body>
 </html>
