Panel Cennika poprawiony, ale jeszcze nie skończony.

--- a/index.html
+++ b/index.html
@@ -504,11 +504,10 @@
             <div class="center">
                 <h2>Cennik</h2>
             </div>
-
             <div class="grid mt-8 grid-3" style="max-width: 980px; margin: 0 auto;">
                 <!-- Starter -->
                 <div class="card pad">
-                    <div class="feature-title">Starter</div>
+                    <div class="feature-title">Plan S</div>
                     <div class="mt-2"><span class="price" data-testid="p-starter" id="p-starter">299 zł</span> <span class="muted" data-testid="s-starter" id="s-starter">/ mies.</span></div>
                     <ul class="list mt-2">
                         <li><svg class="icon" fill="none" stroke="currentColor" stroke-width="2" viewbox="0 0 24 24"><path d="M5 12l5 5L20 7"></path></svg>Do 1 000 SKU / konto Allegro</li>
@@ -517,12 +516,11 @@
                         <li class="muted">Raport tygodniowy PDF/Email</li>
                         <li class="muted">Podstawowa integracja Allegro API</li>
                     </ul>
-                    <div class="mt-6"><a class="btn" href="#signup">Rozpocznij</a></div>
                 </div>
                 <!-- Growth (highlight) -->
                 <div class="card pad" style="border:2px solid var(--accent)">
-                    <div class="feature-title">Growth</div>
-                    <div class="mt-2"><span class="price" data-testid="p-growth" id="p-growth">899 zł</span> <span class="muted" data-testid="s-growth" id="s-growth">/ mies.</span></div>
+                    <div class="feature-title">Plan M</div>
+                    <div class="mt-2"><span class="price" data-testid="p-growth" id="p-growth">499 zł</span> <span class="muted" data-testid="s-growth" id="s-growth">/ mies.</span></div>
                     <ul class="list mt-2">
                         <li><svg class="icon" fill="none" stroke="currentColor" stroke-width="2" viewbox="0 0 24 24"><path d="M5 12l5 5L20 7"></path></svg>Do 10 000 SKU</li>
                         <li><svg class="icon" fill="none" stroke="currentColor" stroke-width="2" viewbox="0 0 24 24"><path d="M5 12l5 5L20 7"></path></svg>Prognozy granularne per SKU, sezonowość</li>
@@ -530,12 +528,11 @@
                         <li class="muted">Symulacje 'co-jeśli' i plan zakupów</li>
                         <li class="muted">Integracje ERP/WMS (konektory)</li>
                     </ul>
-                    <div class="mt-6"><a class="btn primary" href="#signup">Wypróbuj Growth</a></div>
                 </div>
                 <!-- Pro -->
                 <div class="card pad">
-                    <div class="feature-title">Pro</div>
-                    <div class="mt-2"><span class="price" data-testid="p-pro" id="p-pro">2 499 zł</span> <span class="muted" data-testid="s-pro" id="s-pro">/ mies.</span></div>
+                    <div class="feature-title">Plan L</div>
+                    <div class="mt-2"><span class="price" data-testid="p-pro" id="p-pro">999 zł</span> <span class="muted" data-testid="s-pro" id="s-pro">/ mies.</span></div>
                     <ul class="list mt-2">
                         <li><svg class="icon" fill="none" stroke="currentColor" stroke-width="2" viewbox="0 0 24 24"><path d="M5 12l5 5L20 7"></path></svg>Do 100 000 SKU</li>
                         <li><svg class="icon" fill="none" stroke="currentColor" stroke-width="2" viewbox="0 0 24 24"><path d="M5 12l5 5L20 7"></path></svg>Dynamic pricing (reguły + RL)</li>
@@ -543,7 +540,6 @@
                         <li class="muted">SLA 99.9% i dedykowany opiekun</li>
                         <li class="muted">API i webhooki, SSO, audyt danych</li>
                     </ul>
-                    <div class="mt-6"><a class="btn" href="#signup">Zamów Demo</a></div>
                 </div>
                 <!-- Enterprise -->
             </div>
