--- a/index.html
+++ b/index.html
@@ -513,8 +513,6 @@
                         <li><svg class="icon" fill="none" stroke="currentColor" stroke-width="2" viewbox="0 0 24 24"><path d="M5 12l5 5L20 7"></path></svg>Do 1 000 SKU / konto Allegro</li>
                         <li><svg class="icon" fill="none" stroke="currentColor" stroke-width="2" viewbox="0 0 24 24"><path d="M5 12l5 5L20 7"></path></svg>Prognozy sprzedaży (podstawowe)</li>
                         <li><svg class="icon" fill="none" stroke="currentColor" stroke-width="2" viewbox="0 0 24 24"><path d="M5 12l5 5L20 7"></path></svg>Wykrywanie anomalii cen i popytu</li>
-                        <li class="muted">Raport tygodniowy PDF/Email</li>
-                        <li class="muted">Podstawowa integracja Allegro API</li>
                     </ul>
                 </div>
                 <!-- Growth (highlight) -->
@@ -525,8 +523,6 @@
                         <li><svg class="icon" fill="none" stroke="currentColor" stroke-width="2" viewbox="0 0 24 24"><path d="M5 12l5 5L20 7"></path></svg>Do 10 000 SKU</li>
                         <li><svg class="icon" fill="none" stroke="currentColor" stroke-width="2" viewbox="0 0 24 24"><path d="M5 12l5 5L20 7"></path></svg>Prognozy granularne per SKU, sezonowość</li>
                         <li><svg class="icon" fill="none" stroke="currentColor" stroke-width="2" viewbox="0 0 24 24"><path d="M5 12l5 5L20 7"></path></svg>Rekomendacje cenowe + alerty</li>
-                        <li class="muted">Symulacje 'co-jeśli' i plan zakupów</li>
-                        <li class="muted">Integracje ERP/WMS (konektory)</li>
                     </ul>
                 </div>
                 <!-- Pro -->
@@ -537,8 +533,6 @@
                         <li><svg class="icon" fill="none" stroke="currentColor" stroke-width="2" viewbox="0 0 24 24"><path d="M5 12l5 5L20 7"></path></svg>Do 100 000 SKU</li>
                         <li><svg class="icon" fill="none" stroke="currentColor" stroke-width="2" viewbox="0 0 24 24"><path d="M5 12l5 5L20 7"></path></svg>Dynamic pricing (reguły + RL)</li>
                         <li><svg class="icon" fill="none" stroke="currentColor" stroke-width="2" viewbox="0 0 24 24"><path d="M5 12l5 5L20 7"></path></svg>Alerty SMS/Push, harmonogram</li>
-                        <li class="muted">SLA 99.9% i dedykowany opiekun</li>
-                        <li class="muted">API i webhooki, SSO, audyt danych</li>
                     </ul>
                 </div>
                 <!-- Enterprise -->
@@ -550,7 +544,7 @@
         <div class="container">
             <div class="card pad" style="max-width:800px;margin:0 auto">
                 <div class="center">
-                    <h3 style="margin:0">Formularz kontaktowy</h3>
+                    <h3 style="font-size:1.6rem;line-height:1.2">Formularz kontaktowy</h3>
                     <p class="muted" style="margin-top:0.5rem">
                         Masz pytania lub chcesz złożyć zamówienie? Wypełnij poniższy formularz, a skontaktujemy się z Tobą.
                     </p>
