--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
         </footer>
         <script>
             // === Global config ===
-            const FORMSPREE_ENDPOINT = 'https://formspree.io/f/mqadvnng'; // <- Swój ID
+            const FORMSPREE_ENDPOINT = 'https://formspree.io/f/mqadvnng'; // <- Wpisz swój ID
 
             // === Init year ===
             document.getElementById('year').textContent = new Date().getFullYear();
